--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ html, body {
     background-color: #B8B6B4;
     background-image: linear-gradient(#1B384D, #1A2838);
     font-family: motiva-sans, sans-serif;
-    font-size: 15px;
+    font-size: 14px;
 }
 
 nav {
@@ -126,4 +126,37 @@ nav {
     width: 85%;
     height: 100%;
     margin: auto;
+}
+
+.cluster-header {
+    font-size: 14px;
+    color: white;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: normal;
+    padding-top: 2px;
+    margin: 0 0 10px;
+}
+
+.button-cluster-container {
+    display: block;
+}
+
+.button-cluster {
+    display: inline-block;
+    margin-right: 8px;
+}
+
+.button-big {
+    display: inline-block;
+    width: 200px;
+    height: 70px;
+    border-radius: 3px;
+    box-shadow: 0 0 4px #000;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 50px;
+    background-color: #1C6184;
+    color: #5EB7E9;
+    text-align: center;
 }
