--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,10 +1,14 @@
 .container {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.page-content {
+    display: flex;
+    padding-bottom: 2.5rem;
 }
 
 .item {
-    height: 100vh;
     width: 500px;
 }
 
