--- a/styles/sections/games-streaming-now.css
+++ b/styles/sections/games-streaming-now.css
@@ -2,55 +2,24 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    margin-top: 10px;
-    padding-bottom: 5px;
+    gap: 8px;
 }
 
-.games-streaming-capsule {
-    height: 207px;
-    width: 297px;
-    background: rgba(255,255,255,0.1);
+.games-streaming-now .card {
+    background: none;
+    background-color: #FFFFFF1A;
 }
 
-.games-streaming-spacer {
-    margin-right: 5px;
-    margin-bottom: 8px;
+.games-streamin-now .card__header:before {
+    content: url("images/games_streaming_now/play_icon80.png");
+    z-index: 2;
+    color: white;
+    /* border: solid 1px red; */
 }
 
-.games-streaming-header {
-    height: 142px;
-    width: 100%;
-    position: relative;
-}
-
-.games-streaming-img {
-    height: 100%;
-    width: 100%;
-}
-
-.play-button {
-    position: absolute;
-    padding: 18% 36%;
-    z-index: 1;
-}
-
-.games-streaming-footer {
-    display: flex;
+.games-streaming-now .card__footer {
     justify-content: space-between;
-    margin-top: 33px;
-    margin-left: 5px;
-    padding-bottom: 6px;
-    color: #c7d5e0;
-}
-
-.games-title {
-    line-height: 23px;
-    font-size: 13px;
-    padding: 3px;
-}
-
-.games-viewer {
-    margin: 0px 5px 0px 8px;
-    padding-left: 28px;
-    line-height: 27px;
+    margin: 33px 0 0 0;
+    padding: 3px 8px 6px;
+    color: #C7D5E0;
 }
