--- a/styles/header-nav.css
+++ b/styles/header-nav.css
@@ -1,20 +1,20 @@
 header {
     display: flex;
+    justify-content: center;
     align-items: center;
     width: 100%;
-    height: 115px;
+    margin: 0;
+    padding: 30px 0;
     background-color: #171A21;
     text-transform: uppercase;
-    
 }
 
-ul {
-    list-style-type: none;
+header ul {
+    padding: 0;
 }
 
 .header__logo {
     height: 45px;
-    margin-left: 500px;
 }
 
 .header__links {
@@ -25,4 +25,8 @@ ul {
     padding: 0px 8px;
     color: #B8B6B4;
     text-decoration: none;
+}
+
+.center {
+    display: flex;
 }
