--- a/styles/section.css
+++ b/styles/section.css
@@ -1,28 +1,33 @@
 section {
+    width: 100%;
     margin-top: 40px;
+    margin-bottom: 40px;
 }
 
-.section-header {
-    display: flex;
-    justify-content: space-between;
+.section__header {
+    padding: 8px 0;
+    margin: 4px 0;
     color: white;
     text-transform: uppercase;
     font-size: 14px;
-    letter-spacing: 2px;
+    letter-spacing: 1.3px;
     font-weight: normal;
 }
 
-.section-header-button {
-    border-radius: 2px;
+.section__top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.section__header__link {
+    border-radius: 3px;
     border: 1px solid rgba(255, 255, 255, 0.4);
-    padding: 0 15px;
-    color: #fff;
+    padding: 4px 12px;
+    color: #ffffff;
     background: transparent;
     font-size: 12px;
     letter-spacing: 0.3px;
-}
-
-.secion-header-button span {
-    font-size: 12px;
-    line-height: 20px;
+    text-decoration: none;
+    text-transform: uppercase;
 }
