--- a/styles/sections/special-offers.css
+++ b/styles/sections/special-offers.css
@@ -1,120 +1,57 @@
 .special-offers-grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: auto;
-  column-gap: 11px;
+  grid-template-rows: 1fr 1fr;
+  gap: 8px;
 }
 
-.special-offers-column {
-  display: grid;
-  grid-template-columns: 100%;
-  grid-template-rows: 50% 50%;
-  row-gap: 1px;
-}
-
-.special-offers .big-capsule-container {
-  height: 100%;
-  margin-bottom: 15px;
-}
-
-.special-offers .big-capsule-img {
-  width: 100%;
-  height: 300px;
-}
-
-.special-offers .big-capsule-footer {
-  padding: 8px 16px 8px 16px;
-  background-color: #1D668A;
-  font-size: 12px;
-  font-weight: 300;
-}
-
-.special-offers .big-capsule-description {
-  color: #fff;
-}
-
-.special-offers .big-capsule-title {
-  margin: 0 0 10px;
-  padding-top: 2px;
-  text-transform: uppercase;
-  font-size: 14px;
-  letter-spacing: 2px;
-}
-
-.special-offers .big-capsule-time {
-  color: #ACDBF5;
-  font-size: 12px;
-}
-
-.special-offers .big-capsule-discount {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin-top: 10px;
-}
-
-.special-offers .capsule-img {
-    width: 100%;
-    height: auto;
-}
-
-.special-offers .capsule-footer {
+.special-offers .card__footer {
   display: flex;
   justify-content: space-between;
   background-color: #AFDDF5;
 }
 
-.special-offers .capsule-description {
-  color: #fff;
-  padding: 7px 7px 4px 7px;
+.special-offers .card__deal {
+  padding: 7px 7px 4px;  
 }
 
-.special-offers .description-title {
+.special-offers .card__title {
   color: #283846;
-  font-size: 11px; 
-}
-
-.special-offers .description-time {
-  margin-top: 4px;
-  padding: 0 4px;
-  background-color: #4f95bd;
-  font-size: 10px;
-  line-height: 13px;
-}
-
-.special-offers .capsule-discount {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin: 7px 7px 7px 0px;
-}
-
-.special-offers .discount-percentage {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  padding: 0 5px;
-  background-color: #4C6B22;
-  color: #A4D006;
-  line-height: 34px;
-  font-size: 26px;
-}
-
-.special-offers .price-container {
-  padding: 4px 10px 4px 7px;
-  background-color: #344554;
-}
-
-.special-offers .price-old {
-  display: flex;
-  justify-content: flex-end;
-  text-decoration: line-through;
-  color: #7193A6;
   font-size: 11px;
 }
 
-.special-offers .price-new {
-  color: #ACDBF5;
+.special-offers .card__time {
+  display: flex;
+  justify-content: center;
+  width: fit-content;
+  margin: 4px 0 0;
+  padding: 0 4px;
+  background-color: #4F95BD;
+  color: #C4E4F2;
+  font-size: 10px;
+}
+
+.special-offers .card__value {
+  padding: 5px;
+}
+
+.special-offers .card__discount {
+  display: flex;
+  align-items: center;
+  padding: 0 5px;
+  font-size: 26px;
+}
+
+.special-offers .card__prices {
+  padding: 4px 10px 4px 7px;
+  background-color: rgba(20,31,44,0.8);
+}
+
+.special-offers .card__price-old {
+  text-align: right;
+  font-size: 11px;
+}
+
+.special-offers .card__price {
   font-size: 13px;
 }
