--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -1,10 +1,10 @@
 .sidebar {
-    width: 220px;
+    width: 45%;
     margin: 10px 20px 0 0;
 }
 
 .sidebar li {
-    padding: 2.5px 0;
+    padding: 4px 0;
 }
 
 .sidebar__content {
@@ -25,11 +25,19 @@
     color: #C6D4DF;
     text-transform: uppercase;
     font-size: 12px;
-    font-weight: normal;
 }
 
 .sidebar__link {
+    margin: 7px 0;
     color: #66C0F4;
     text-decoration: none;
+    line-height: 16px;
     font-size: 12px;
+}
+
+@media only screen and (max-width: 1520px) {
+    .sidebar{
+        display: none;
+    }
+        
 }
